# datachallange

./: .gitignore  README.md  awk_address  datachallange.cabal  presentation.md  stack.yaml
app/: Main.hs
benchmark/: Main.hs
cmd/: Main.hs
src/: App.hs
src/Http/: Servant.hs  Server.hs
src/Process/: File.hs
src/Type/: .Player.hs.swp  .Top10.hs.swp  API.hs  Acc.hs  Concurrent.hs  Date.hs  FileData.hs  Id.hs  Parser.hs  Play.hs  Player.hs  PlayerIds.hs  Score.hs  ScoreContainer.hs  ScoreIndex.hs  Scores.hs  ShortEvent.hs  ShortEvents.hs  Top10.hs
test/Http/: ServerSpec.hs
test/Type/: DateSpec.hs  PlaySpec.hs  PlayerIdsSpec.hs  PlayerSpec.hs  ScoreContainerSpec.hs  ScoreSpec.hs  ShortEventSpec.hs  ShortEventsSpec.hs
